--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,32 +1,36 @@
-<form [formGroup]="loginForm">
-    <strong>
-        <h2 class="text-center pb-2">Login</h2>
-    </strong>
-    <hr />
-    <p class="my-3 text-center">Please enter your credentials below to login.
-    </p>
-    <div class="my-3">
-        <input type="text" class="form-input" placeholder="Enter Your Username"
-            formControlName="username" />
-        <div *ngIf="loginForm.get('username').invalid && loginForm.get('username').touched"
-            class="text-red ml-1">
-            <div *ngIf="loginForm.get('username').errors?.['required']"><small>Username is required</small>
+<div class="w-full flex h-screen">
+    <div class="w-3">
+        <h2 class="text-center mt-5 text-blue">HMA</h2>
+        <form [formGroup]="loginForm" class="relative p-5 bg-white login-container text-center border-round-lg">
+            <strong>
+                <h2 class="pb-4 text-left">Welcome Back!</h2>
+            </strong>
+            <div class="my-4">
+                <input type="text" class="form-input" placeholder="Enter Your Username" formControlName="username" />
+                <div *ngIf="loginForm.get('username').invalid && loginForm.get('username').touched"
+                    class="text-red ml-1 text-left">
+                    <div *ngIf="loginForm.get('username').errors?.['required']"><small>Username is required</small>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="my-3">
-        <input type="password" class="form-input" placeholder="Enter Your Password"
-            formControlName="password" />
-        <div *ngIf="loginForm.get('password').invalid && loginForm.get('password').touched"
-            class="text-red ml-1">
-            <div *ngIf="loginForm.get('password').errors?.['required']"><small>Password is required</small>
+            <div class="my-4">
+                <input type="password" class="form-input" placeholder="Enter Your Password"
+                    formControlName="password" />
+                <div *ngIf="loginForm.get('password').invalid && loginForm.get('password').touched"
+                    class="text-red ml-1 text-left">
+                    <div *ngIf="loginForm.get('password').errors?.['required']"><small>Password is required</small>
+                    </div>
+                </div>
             </div>
-        </div>
+            <div class="mt-3 inline-block">
+                <button class="btn btn-blue" type="submit" (click)="loginRequest()"
+                    [disabled]="!loginForm.valid" >Login</button>
+            </div>
+        </form>
     </div>
-    <div class="my-3 text-center">
-        <button class="btn btn-black" type="submit" (click)="loginRequest()"
-            [disabled]="!loginForm.valid">Login</button>
-    </div>
-</form>
+    <div class="w-9 linear-gradient-bg"></div>
+</div>
+
+
 
 <!-- prakhar@kilobytetech.com -->
