added routing and header component

--- a/src/app/kb-pages/dashboard/dashboard.component.html
+++ b/src/app/kb-pages/dashboard/dashboard.component.html
@@ -1,18 +1,1 @@
-<div class="flex h-screen">
-    <div class="w-1 bg-blue flex flex-column justify-content-between align-items-center text-white">
-        <h2 class="text-center mt-3">HMA</h2>
-        <div class="h-75"> 
-            <p>Dashboard</p>
-            <p>Client</p>
-            <p>Documents</p>
-            <p>Task</p>
-            <p>Payment</p>
-        </div>
-        <div>
-            <p>User</p>
-        </div>
-    </div>
-    <div class="w-11">
-
-    </div>
-</div>
+<p>Dashboard Component</p>
