--- a/src/app/kb-pages/client/client.component.html
+++ b/src/app/kb-pages/client/client.component.html
@@ -1,1 +1,39 @@
-<p>client works!</p>
+<div>
+    <div class="flex justify-content-between align-items-center h-5rem px-6">
+        <h2>Clients</h2>
+        <div class="flex justify-content-between align-items-center w-6 gap-5">
+            <div class="w-9">
+                <input class="form-input" placeholder="Search Keyword" />
+            </div>
+            <div class="w-3">
+                <button class="btn btn-green">+Add Client</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="h-5rem flex justify-content-between px-6 bg-bluegray-100 align-items-center">
+        <p>All</p>
+        <p>Dropdown</p>
+    </div>
+
+    <div class="px-6 py-5">
+        <table class="table">
+            <tr>
+                <th class="th">Client Id</th>
+                <th class="th">Company name</th>
+                <th class="th">Creation date</th>
+                <th class="th">Assigned member</th>
+                <th></th>
+            </tr>
+            <tr *ngFor="let client of clients">
+                <td class="td">{{client.clientID}}</td>
+                <td class="td">{{client.companyName}}</td>
+                <td class="td">{{client.createdAt | date:'MMM dd, y' }}}}</td>
+                <td class="td">{{client.assignedMembers}}</td>
+                <td class="td">Action Button</td>
+            </tr>
+           
+        </table>
+    </div>
+</div>
+
